deploy/base/temporal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: temporal
spec:
  type: ClusterIP
  selector: {app: temporal}
  ports:
    - {name: grpc, port: 7233, targetPort: grpc}
