deploy/base/temporal/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: temporal
spec:
  podSelector:
    matchLabels: {app: temporal}
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - podSelector:
            matchLabels: {temporal-client: "true"}
      ports:
        - {protocol: TCP, port: 7233}
    - from:
        - podSelector:
            matchLabels: {app: temporal}
      ports:
        - {protocol: TCP, port: 7233, endPort: 7239}
        - {protocol: TCP, port: 6933, endPort: 6939}
        - {protocol: UDP, port: 6933, endPort: 6939}
  egress:
    - to:
        - podSelector:
            matchLabels: {app: temporal}
      ports:
        - {protocol: TCP, port: 7233, endPort: 7239}
        - {protocol: TCP, port: 6933, endPort: 6939}
        - {protocol: UDP, port: 6933, endPort: 6939}
    - to:
        - namespaceSelector:
            matchLabels: {kubernetes.io/metadata.name: kube-system}
          podSelector:
            matchLabels: {k8s-app: kube-dns}
      ports:
        - {protocol: UDP, port: 53}
        - {protocol: TCP, port: 53}
    - to:
        - podSelector: {matchLabels: {app: postgresql-entry}}
      ports:
        - {protocol: TCP, port: 5432}
